0.2.0
 - feat: add buttons for controlling annotation tools
0.1.5
 - setup: remove unused code from windows spec file
0.1.4
 - build: do not pin mahotas
0.1.3
 - build: add Windows and macOS installers
0.1.2
 - fix: disable native menubar on macOS
0.1.1
 - setup: move to src layout
 - docs: properly employ license GPL-3.0-or-later
0.1.0
 - initial release