@@ -20,20 +20,46 @@ class Ui_MainWindow(object):
         self.verticalLayout.setObjectName("verticalLayout")
         self.gridLayout = QtWidgets.QGridLayout()
         self.gridLayout.setObjectName("gridLayout")
+        self.label = QtWidgets.QLabel(parent=self.centralwidget)
+        self.label.setObjectName("label")
+        self.gridLayout.addWidget(self.label, 0, 0, 1, 1)
+        self.label_11 = QtWidgets.QLabel(parent=self.centralwidget)
+        self.label_11.setObjectName("label_11")
+        self.gridLayout.addWidget(self.label_11, 2, 0, 1, 1)
         self.lineEdit_session = QtWidgets.QLineEdit(parent=self.centralwidget)
         self.lineEdit_session.setReadOnly(True)
         self.lineEdit_session.setObjectName("lineEdit_session")
         self.gridLayout.addWidget(self.lineEdit_session, 1, 1, 1, 1)
+        self.label_2 = QtWidgets.QLabel(parent=self.centralwidget)
+        self.label_2.setObjectName("label_2")
+        self.gridLayout.addWidget(self.label_2, 1, 0, 1, 1)
         self.lineEdit_source = QtWidgets.QLineEdit(parent=self.centralwidget)
         self.lineEdit_source.setReadOnly(True)
         self.lineEdit_source.setObjectName("lineEdit_source")
         self.gridLayout.addWidget(self.lineEdit_source, 0, 1, 1, 1)
-        self.label = QtWidgets.QLabel(parent=self.centralwidget)
-        self.label.setObjectName("label")
-        self.gridLayout.addWidget(self.label, 0, 0, 1, 1)
-        self.label_2 = QtWidgets.QLabel(parent=self.centralwidget)
-        self.label_2.setObjectName("label_2")
-        self.gridLayout.addWidget(self.label_2, 1, 0, 1, 1)
+        self.horizontalLayout_7 = QtWidgets.QHBoxLayout()
+        self.horizontalLayout_7.setObjectName("horizontalLayout_7")
+        self.comboBox_segmenter = QtWidgets.QComboBox(parent=self.centralwidget)
+        self.comboBox_segmenter.setObjectName("comboBox_segmenter")
+        self.horizontalLayout_7.addWidget(self.comboBox_segmenter)
+        self.widget_segm_threshold = QtWidgets.QWidget(parent=self.centralwidget)
+        self.widget_segm_threshold.setObjectName("widget_segm_threshold")
+        self.horizontalLayout_8 = QtWidgets.QHBoxLayout(self.widget_segm_threshold)
+        self.horizontalLayout_8.setContentsMargins(-1, 0, -1, 0)
+        self.horizontalLayout_8.setObjectName("horizontalLayout_8")
+        self.label_13 = QtWidgets.QLabel(parent=self.widget_segm_threshold)
+        self.label_13.setObjectName("label_13")
+        self.horizontalLayout_8.addWidget(self.label_13)
+        self.spinBox_thresh = QtWidgets.QSpinBox(parent=self.widget_segm_threshold)
+        self.spinBox_thresh.setMinimum(-20)
+        self.spinBox_thresh.setMaximum(-1)
+        self.spinBox_thresh.setProperty("value", -6)
+        self.spinBox_thresh.setObjectName("spinBox_thresh")
+        self.horizontalLayout_8.addWidget(self.spinBox_thresh)
+        self.horizontalLayout_7.addWidget(self.widget_segm_threshold)
+        spacerItem = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
+        self.horizontalLayout_7.addItem(spacerItem)
+        self.gridLayout.addLayout(self.horizontalLayout_7, 2, 1, 1, 1)
         self.verticalLayout.addLayout(self.gridLayout)
         self.horizontalLayout = QtWidgets.QHBoxLayout()
         self.horizontalLayout.setObjectName("horizontalLayout")
@@ -43,8 +69,8 @@ class Ui_MainWindow(object):
         self.label_frame = QtWidgets.QLabel(parent=self.centralwidget)
         self.label_frame.setObjectName("label_frame")
         self.horizontalLayout.addWidget(self.label_frame)
-        spacerItem = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Fixed, QtWidgets.QSizePolicy.Policy.Minimum)
-        self.horizontalLayout.addItem(spacerItem)
+        spacerItem1 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Fixed, QtWidgets.QSizePolicy.Policy.Minimum)
+        self.horizontalLayout.addItem(spacerItem1)
         self.widget_labels = QtWidgets.QWidget(parent=self.centralwidget)
         self.widget_labels.setObjectName("widget_labels")
         self.horizontalLayout_2 = QtWidgets.QHBoxLayout(self.widget_labels)
@@ -56,14 +82,14 @@ class Ui_MainWindow(object):
         self.label_label_current = QtWidgets.QLabel(parent=self.widget_labels)
         self.label_label_current.setObjectName("label_label_current")
         self.horizontalLayout_2.addWidget(self.label_label_current)
-        spacerItem1 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Fixed, QtWidgets.QSizePolicy.Policy.Minimum)
-        self.horizontalLayout_2.addItem(spacerItem1)
+        spacerItem2 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Fixed, QtWidgets.QSizePolicy.Policy.Minimum)
+        self.horizontalLayout_2.addItem(spacerItem2)
         self.label_labels_available = QtWidgets.QLabel(parent=self.widget_labels)
         self.label_labels_available.setObjectName("label_labels_available")
         self.horizontalLayout_2.addWidget(self.label_labels_available)
         self.horizontalLayout.addWidget(self.widget_labels)
-        spacerItem2 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
-        self.horizontalLayout.addItem(spacerItem2)
+        spacerItem3 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
+        self.horizontalLayout.addItem(spacerItem3)
         self.verticalLayout.addLayout(self.horizontalLayout)
         self.graphics_widget = GraphicsLayoutWidget(parent=self.centralwidget)
         sizePolicy = QtWidgets.QSizePolicy(QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Expanding)
@@ -188,8 +214,8 @@ class Ui_MainWindow(object):
         self.label_18.setTextFormat(QtCore.Qt.TextFormat.MarkdownText)
         self.label_18.setObjectName("label_18")
         self.gridLayout_2.addWidget(self.label_18, 9, 1, 1, 1)
-        spacerItem3 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
-        self.gridLayout_2.addItem(spacerItem3, 1, 3, 1, 1)
+        spacerItem4 = QtWidgets.QSpacerItem(40, 20, QtWidgets.QSizePolicy.Policy.Expanding, QtWidgets.QSizePolicy.Policy.Minimum)
+        self.gridLayout_2.addItem(spacerItem4, 1, 3, 1, 1)
         self.label_24 = QtWidgets.QLabel(parent=self.widget)
         self.label_24.setTextFormat(QtCore.Qt.TextFormat.MarkdownText)
         self.label_24.setObjectName("label_24")
@@ -242,7 +268,9 @@ class Ui_MainWindow(object):
         _translate = QtCore.QCoreApplication.translate
         MainWindow.setWindowTitle(_translate("MainWindow", "MainWindow"))
         self.label.setText(_translate("MainWindow", "DC file"))
+        self.label_11.setText(_translate("MainWindow", "Segmenter"))
         self.label_2.setText(_translate("MainWindow", "Session"))
+        self.label_13.setText(_translate("MainWindow", "Threshold value"))
         self.label_26.setText(_translate("MainWindow", "Current frame:"))
         self.label_frame.setText(_translate("MainWindow", "--"))
         self.label_28.setText(_translate("MainWindow", "Current label:"))
